<resources>
    <string name="app_name">GsonDemo</string>
    <string name="objToJson">对象转Json</string>
    <string name="doSomeWork">执行</string>
    <string name="mapping">mapping</string>
    <string name="jsonToObj">json转对象</string>
    <string name="nestedObjects">嵌套对象转Json</string>
    <string name="jsonToNestedObjects">Json转嵌套对象</string>

    <string name="nestedListToJson">对象嵌套list转Json</string>
    <string name="jsonToNestedList">json转对象嵌套list</string>
    <string name="listToJson">list转Json</string>
    <string name="jsonToArray">json转数组</string>
    <string name="jsonToList">json转对list</string>
    <string name="mapToJson">map转json</string>
    <string name="jsonToMap">json转map</string>
    <string name="setToJson">set转Json</string>
    <string name="jsonToSet">json转set</string>
    <string name="nullValues">NullValues</string>
    <string name="configuration">Configuration</string>
    <string name="serializedName">\@SerializedName基础</string>
    <string name="serializedNameExtend">\@SerializedName扩展</string>
    <string name="expose">\@Expose</string>
</resources>
