<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="loveq.rc.gsondemo.ui.MappingActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/objToJson"
            android:onClick="startObjToJsonActivity"
            android:text="@string/objToJson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/jsonToObj"
            android:onClick="startJsonToObjActivity"
            android:text="@string/jsonToObj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/nestedObjects"
            android:onClick="startNestedObjectsActivity"
            android:text="@string/nestedObjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/jsonToNestedObjects"
            android:onClick="startJsonToNestedObjectsActivity"
            android:text="@string/jsonToNestedObjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/nestedListToJson"
            android:onClick="startNestedListToJsonActivity"
            android:text="@string/nestedListToJson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/jsonToNestedList"
            android:onClick="startJsonToNestedListActivity"
            android:text="@string/jsonToNestedList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/listToJson"
            android:onClick="startListToJsonActivity"
            android:text="@string/listToJson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/jsonToArray"
            android:onClick="startJsonToArrayActivity"
            android:text="@string/jsonToArray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/jsonToList"
            android:onClick="startJsonToListActivity"
            android:text="@string/jsonToList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/mapToJson"
            android:onClick="startMapToJsonActivity"
            android:text="@string/mapToJson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/jsonToMap"
            android:onClick="startJsonToMapActivity"
            android:text="@string/jsonToMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/setToJson"
            android:onClick="startSetToJsonActivity"
            android:text="@string/setToJson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/jsonToSet"
            android:onClick="startJsonToSetActivity"
            android:text="@string/jsonToSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/nullValues"
            android:onClick="startNullValuesActivity"
            android:text="@string/nullValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
