<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="loveq.rc.gsondemo.ui.MappingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/serializedName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSerializedNameActivity"
            android:text="@string/serializedName"/>


        <Button
            android:id="@+id/serializedNameExtend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSerializedNameExtendActivity"
            android:text="@string/serializedNameExtend"/>


        <Button
            android:id="@+id/expose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startExposeActivity"
            android:text="@string/expose"/>

    </LinearLayout>
</ScrollView>
